@@ -259,11 +259,6 @@ WNG_ras_of_purrsia = {
 	compliance_gain = 0.05
 }
 
-CTH_monument_to_the_revolution = {
-	army_core_defence_factor = 0.25
-	local_org_regain = 0.25
-}
-
 KIS_Send_Volunteers = {
 	valid_relation_trigger = {
 		FROM = {
