@@ -7490,9 +7490,11 @@ focus_tree = {
 		completion_reward = {
 			country_event = colthage_other.163
 			875 = {
-				add_province_modifier = {
-					static_modifiers = { CTH_monument_to_the_revolution }
-					province = { id = 18351 }
+				add_building_construction = {
+					type = landmark_monument_to_revolution
+					level = 1
+					instant_build = yes
+					province = 18351
 				}
 			}
 		}
