@@ -203,6 +203,13 @@ entity = { #TODO GTD need custom model
 }
 
 entity = { #TODO GTD need custom model
+	name = "building_landmark_monument_to_revolution"
+	clone = "building_landmark_spawn"
+
+	default_state = "idle"
+}
+
+entity = { #TODO GTD need custom model
 	name = "building_landmark_aby_af_katown_pyramid"
 	clone = "building_landmark_spawn"
 
