@@ -132,7 +132,11 @@
  landmark_university_of_timbucktu_plural: "$landmark_university_of_timbucktu$"
  landmark_university_of_timbucktu_desc: "The University of Timbucktu is the first and so far only such educational facility in the Great Lakes region, and has been open for many centuries now. It attracts scholars from all around western Zebrica and has an expansive library filled with bound books and scrolls."
  
- landmark_grand_temple_eyr:0 "The Grand Temple of Eyr"
- landmark_grand_temple_eyr_plural:0 "$landmark_grand_temple_eyr$"
- landmark_grand_temple_eyr_desc:0 "The Grand Temple of Eyr is hidden behind a large garden and covered in thick foliage, so its true size remains hidden from view. It is a large structure, one of the largest ones in Romau, home to the Archon of Eyr and hundreds of clergygriffons. Dedicated to the goddess of fertility, it is said that if all of Romau ran out of food, the Temple would still be able to feed itself thanks to its bountiful gardens. Romauans say there is a simple way to discover the well-being of the citizenry: in times of trouble, all griffons flock to the temple to get free bread. Attached to the building is also a huge maternity hospital, where thousands of griffons are born every year."
+ landmark_grand_temple_eyr: "The Grand Temple of Eyr"
+ landmark_grand_temple_eyr_plural: "$landmark_grand_temple_eyr$"
+ landmark_grand_temple_eyr_desc: "The Grand Temple of Eyr is hidden behind a large garden and covered in thick foliage, so its true size remains hidden from view. It is a large structure, one of the largest ones in Romau, home to the Archon of Eyr and hundreds of clergygriffons. Dedicated to the goddess of fertility, it is said that if all of Romau ran out of food, the Temple would still be able to feed itself thanks to its bountiful gardens. Romauans say there is a simple way to discover the well-being of the citizenry: in times of trouble, all griffons flock to the temple to get free bread. Attached to the building is also a huge maternity hospital, where thousands of griffons are born every year."
+ 
+ landmark_monument_to_revolution: "The Monument to the Revolution"
+ landmark_monument_to_revolution_plural: "$landmark_monument_to_revolution$"
+ landmark_monument_to_revolution_desc: "Located in the center of Colthage, the Monument to the Revolution is a grand archway honouring those who fell during the Colthaginian Revolution. It also functions as a mausoleum, with many heroes buried within."
  
