@@ -54,7 +54,7 @@
  #EAW_WS_TAB_5_TXT_HEADER_5:0 "§Y'In the Shadow of Mountains' 1.8.0.1§!"
  #EAW_WS_TAB_5_TXT_HEADER_6:0 "§Y'In the Shadow of Mountains' 1.8§!"
  #EAW_WS_TAB_5_TXT_HEADER_7:0 "§Y'Pax Chrysalia: Redux' 1.7.7.1§!"
- EAW_WS_TAB_5_TXT:0 "\n\n+ Additions:\n    - Added unique province terrain art for Canterlot, Griffenheim, Manehattan and Vesalipolis.\n    - Added a custom GUI for managing prefectures for Zarishat's Coltva.\n    - Kaiser Kattail's Projekt Metropol can now also be undertaken on various large cities across the world, coring them and turning them into arcologies.\n    - Kaiser Kattail now has two new Aeternite Relic decisions.\n+ Changes:\n    - Added some breakthrough bonus effects to the generic griffon and zebra focus tree.\n    - Katown Pyramid and Zebtropa Dam projects now spawn landmarks.\n    - Miscellaneous DLC related improvements for Kattail's focus tree.\n    - Separated the Imperial Palace and the Grand Temple of Boreas landmarks.\n    - Truthahn in Greifenmarschen now destroys the Grand Temple landmarks.\n+ Fixes:\n    - Eliminated causes of three different CTDs.\n    - Fixed an issue with a special project giving knights too much armour.\n    - Fixed the icon in the synthetic mineral growth special project tooltip.\n    - Corrected position of monopulse radar in the tech tree.\n    - Removed DLC requirements for the future radar special projects.\n    - Hopefully removed the last of human infiltrators from changeling models.\n    - Fixed the Red Sun Yak Army award not being given.\n    - Various fixes for puppeting decisions in Hippogriffia and Chital.\n    - Replaced various obsolete tech requirements with special project checks.\n    - Restored supremacist Romau's special cosmetic tag for forming the Empire.\n    - Fixed an issue with nuclear submarine engines.\n    - Miscellaneous bugfixes and improvements.\n    - Miscellaneous localisation fixes."
+ EAW_WS_TAB_5_TXT:0 "\n\n+ Additions:\n    - Added unique province terrain art for Canterlot, Griffenheim, Manehattan and Vesalipolis.\n    - Added a custom GUI for managing prefectures for Zarishat's Coltva.\n    - Kaiser Kattail's Projekt Metropol can now also be undertaken on various large cities across the world, coring them and turning them into arcologies.\n    - Kaiser Kattail now has two new Aeternite Relic decisions.\n+ Changes:\n    - Added some breakthrough bonus effects to the generic griffon and zebra focus tree.\n    - Katown Pyramid and Zebtropa Dam projects now spawn landmarks.\n    - Miscellaneous DLC related improvements for Kattail's focus tree.\n    - Separated the Imperial Palace and the Grand Temple of Boreas landmarks.\n    - Truthahn in Greifenmarschen now destroys the Grand Temple landmarks.\n    - The Monument to the Revolution built by Constitutionalist Colthage is now a landmark.\n+ Fixes:\n    - Eliminated causes of three different CTDs.\n    - Fixed an issue with a special project giving knights too much armour.\n    - Fixed the icon in the synthetic mineral growth special project tooltip.\n    - Corrected position of monopulse radar in the tech tree.\n    - Removed DLC requirements for the future radar special projects.\n    - Hopefully removed the last of human infiltrators from changeling models.\n    - Fixed the Red Sun Yak Army award not being given.\n    - Various fixes for puppeting decisions in Hippogriffia and Chital.\n    - Replaced various obsolete tech requirements with special project checks.\n    - Restored supremacist Romau's special cosmetic tag for forming the Empire.\n    - Fixed an issue with nuclear submarine engines.\n    - Miscellaneous bugfixes and improvements.\n    - Miscellaneous localisation fixes."
 
  # Continent
  EAW_WS_Zebrica:0 "Zebrica - Crossroad of Civilizations"
