@@ -12,6 +12,7 @@
 	- Miscellaneous DLC related improvements for Kattail's focus tree.
 	- Separated the Imperial Palace and the Grand Temple of Boreas landmarks.
 	- Truthahn in Greifenmarschen now destroys the Grand Temple landmarks.
+	- The Monument to the Revolution built by Constitutionalist Colthage is now a landmark.
 
 ✢ Fixes:
 	- Eliminated causes of three different CTDs.
